--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "@emotion/styled": "^11.10.6",
     "axios": "^1.3.4",
     "framer-motion": "^10.1.0",
-    "next": "13.2.3",
+    "next": "^14.1.4",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
